--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -118,7 +118,7 @@
  padosi_area:0 "Padosi"
  altawra_area:0 "Altawra"
  alvaria_area:0 "Alvaria"
- altaharun_area:0 "Altaharun"
+ altaharan_area:0 "Altaharan"
  Yermontana_area:0 "Yermontana"
  ridagun_area:0 "Ridagun"
  nasihatr_valley_area:0 "Nahrdant"
