--- a/localisation/TD_colonial_regions_l_english.yml
+++ b/localisation/TD_colonial_regions_l_english.yml
@@ -26,9 +26,9 @@
  COLONIAL_Root_Culture_GetName_panpallpa:0 "[Root.GetAdjective] Panpallpa"
  COLONIAL_Root_Culture_GetName_panpallpa_ADJ:0 "[Root.GetAdjective] Panpallpan"
 
- colonial_ardwajdi:0 "Colonial Ardwajdi"
- COLONIAL_ardwajdi:0 "Ardwajdi"
- COLONIAL_ardwajdi_ADJ:0 "Ardwajdi"
+ colonial_dasiras:0 "Colonial Dašras"
+ COLONIAL_dasiras:0 "Dašras"
+ COLONIAL_dasiras_ADJ:0 "Dašras"
  COLONIAL_costalta:0 "Costalta"
  COLONIAL_costalta_ADJ:0 "Costaltan"
  COLONIAL_new_verracia:0 "New Verracia"
@@ -41,8 +41,8 @@
  COLONIAL_koniginland_ADJ:0 "Königinlander"
  COLONIAL_grunkuste:0 "Grunkuste"
  COLONIAL_grunkuste_ADJ:0 "Grunkusten"
- COLONIAL_Root_Culture_GetName_ardwajdi:0 "[Root.GetAdjective] Ardwajda"
- COLONIAL_Root_Culture_GetName_ardwajdi_ADJ:0 "[Root.GetAdjective] Ardwajdan"
+ COLONIAL_Root_Culture_GetName_dasiras:0 "[Root.GetAdjective] Ardwajda"
+ COLONIAL_Root_Culture_GetName_dasiras_ADJ:0 "[Root.GetAdjective] Ardwajdan"
 
  colonial_grossenseen:0 "Colonial Grossenseen"
  COLONIAL_adelbertland:0 "Adelbertland"
