--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -5,7 +5,7 @@
  ifritican:0 "Ifritican"
  altawarani:0 "Altawarani"
  altaharani:0 "Altaharani"
- ardwajdi:0 "Ardwajdi"
+ dasirasi:0 "Dašrasi"
  gandari:0 "Gandari"
  dafdan:0 "Dafdan"
  maqhazian:0 "Maqhazian"
