--- a/localisation/TD_tradegoods_l_english.yml
+++ b/localisation/TD_tradegoods_l_english.yml
@@ -30,7 +30,7 @@
  spices:0 "Spices"
  spicesDESC:0 "Spices were known in the west since ancient times, mostly for their medicinal value, and for their ability to improve the taste of food. Pepper, ginger, nutmeg, chili, cinnamon, etc. came partly from Sahila but mostly from Samadia, Hengtua, and Cakrawalunia, to be traded in Fravasum or the other terminals of the great caravan roads. The Taedian desire for cheaper and more direct supply constituted as the main motivation for restoring trade routes to the west by Ignidunta."
  sugar:0 "Sugar"
- sugarDESC:0 "Sugar was used not only as a sweetener but also for food preservation. The sugar cane was the only known means of obtaining sugar at this time and had been grown initially in some Arkabili islands. But the labor-intensive plantation system in the New World, especially in the Ardwajdi and Venatia, would soon move the major production sources overseas."
+ sugarDESC:0 "Sugar was used not only as a sweetener but also for food preservation. The sugar cane was the only known means of obtaining sugar at this time and had been grown initially in some Arkabili islands. But the labor-intensive plantation system in the New World, especially in the Dašras and Venatia, would soon move the major production sources overseas."
  tea:0 "Tea"
  teaDESC:0 "Tea was an important luxury drink in Eastern Pemenia, most notably in Zimahei Valley and Samadia. It was often used in religious or social rituals. Expanding global market and rebirth of land and sea routes with Pemenia popularized tea in Taedium and Kakigia. Never considered as noble a drink as coffee it still produced large profit merely from the fact that the world supply was low."
  tobacco:0 "Tobacco"
