--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -37,7 +37,7 @@
  xamaneh_tradenode:0 "Xamaneh"
  atlaxotlatl_tradenode:0 "Atlaxotlatl"
  new_wesburg_tradenode:0 "New Wessburg"
- minafariq_tradenode:0 "Minafariq"
+ dagappa_tradenode:0 "Dagappa"
  hermanns_bay_tradenode:0 "Hermann's Bay"
  cassidy_tradenode:0 "Cassidy"
  sipiwimekya_estuary_tradenode:0 "Sipiwimekya Estuary"
