--- a/localisation/loadingtips_l_english.yml
+++ b/localisation/loadingtips_l_english.yml
@@ -12,7 +12,7 @@
  LOADING_TIP_10:0 "Tonatitlani people established their empire following the VIII century collapse caused by mass epidemics and famine."
  LOADING_TIP_11:0 "Rouvia was once a powerful tribal entity but was slowly colonized and conquered by Capiran and Aqerbic states."
  LOADING_TIP_12:0 "Aevadata of Varazanah conquered the Pamkusean peninsula in the XIV century, forcing the local population into exile." 
- LOADING_TIP_13:0 "Apaxtaros is the name of a Eopedian state which embraced the Pamkusean culture in the beginning of the XVI century."
+ LOADING_TIP_13:0 "Instead of trying to supress the locals, Aurang of Memlashal decided to assimilate into his subjects, founding Apaxtaros dynasty."
  LOADING_TIP_14:0 "Ehwitrawi and Mewitan peoples are renowned for their mutual hatred."
  LOADING_TIP_15:0 "City of Togawy is famous for producing high quality Amber jewelry."
  LOADING_TIP_16:0 "Panpallpa means 'Flatlands' in Maquchan language."
@@ -21,8 +21,9 @@
  LOADING_TIP_19:0 "Absolutist monarchy of Bogiland of the XVII century became a role-model for other powerful states in Taedium."
  LOADING_TIP_20:0 "Many people in Tummland believe that Ehrenis are the literal servants of evil spirit Ilkeä."
  LOADING_TIP_21:0 "King Pepik 'The Mad' owned 2 boars, 3 camels and an elephant."
-
  LOADING_TIP_22:0 "After the fall of the Bunelisuli Empire the throne was usurped by the two younger brothers of the legitimate khan - Markörgis Ariunuulyn."
  LOADING_TIP_23:0 "The Hengtuan nations widely embraced gunpowder warfare much earlier than Taedium, but it was the west that perfected the technology."
  LOADING_TIP_24:0 "Cities of Lameng were established after mass exodus of people trying to flee from Huangche autocrats."
  LOADING_TIP_25:0 "Empire of Paradevari protected Samadia from tribal raids for most of its history - up until Bunelisuli invasion."
+ LOADING_TIP_26:0 "People of Šarikullu control the most important trade routes in North Sahila, allowing them to indirectly influence many countries."
+ LOADING_TIP_27:0 "Gug! Gug! Gug!"
