--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -77,33 +77,33 @@
  PROV76:0 "Qafqumir"
  PROV77:0 "SAHILA"
  PROV78:0 "Marjanid"
- PROV79:0 "Dahrayyam"
+ PROV79:0 "Arrecan"
  PROV80:0 "Desanaux"
  PROV81:0 "Baltoq"
- PROV82:0 "Gudayik"
+ PROV82:0 "Gudamahz"
  PROV83:0 "Western Shamaliu"
- PROV84:0 "Qufiram"
- PROV85:0 "Ghaybarin"
- PROV86:0 "Boujloudiya"
- PROV87:0 "Tafsiraq"
- PROV88:0 "Rukhafiq"
- PROV89:0 "South Al-Bahriyah"
+ PROV84:0 "Mahzak"
+ PROV85:0 "Ghabar"
+ PROV86:0 "Ariay"
+ PROV87:0 "Fanzur"
+ PROV88:0 "Melaqan"
+ PROV89:0 "Merkada"
  PROV90:0 "Zaynashar"
- PROV91:0 "Abdahisn"
+ PROV91:0 "Dahimarhz"
  PROV92:0 "Vakosetasi"
  PROV93:0 "Salian Sea"
  PROV94:0 "Ninlilatu"
  PROV95:0 "Sijjazur"
  PROV96:0 "Sedican Coast"
  PROV97:0 "Dhaylan Depth"
- PROV98:0 "Dhofarqil"
+ PROV98:0 "Dufaran"
  PROV99:0 "Aswanqalb"
  PROV100:0 "Qudsala"
- PROV101:0 "Wahida"
- PROV102:0 "Wajdi"
- PROV103:0 "Abdal Aqalu"
- PROV104:0 "Abdal Akbar"
- PROV105:0 "Alnuqhira"
+ PROV101:0 "Nasala"
+ PROV102:0 "102"
+ PROV103:0 "103"
+ PROV104:0 "104"
+ PROV105:0 "105"
  PROV106:0 "106"
  PROV107:0 "107"
  PROV108:0 "108"
@@ -113,7 +113,7 @@
  PROV112:0 "Banlathar"
  PROV113:0 "Zaynashar Depths"
  PROV114:0 "Guranamar"
- PROV115:0 "Northern Niheyabdan Sea"
+ PROV115:0 "Northern Gandari Sea"
  PROV116:0 "Vallacielo"
  PROV117:0 "Lentisca"
  PROV118:0 "Albarroca"
@@ -128,7 +128,7 @@
  PROV127:0 "Tyronal"
  PROV128:0 "Hadasta"
  PROV129:0 "Tummic Lakes"
- PROV130:0 "Al-Abyad"
+ PROV130:0 "Geccania"
  PROV131:0 "Khaymar"
  PROV132:0 "Hamidar"
  PROV133:0 "Tazzemor"
@@ -146,45 +146,45 @@
  PROV145:0 "Yashuqar"
  PROV146:0 "Northern Shamaliu"
  PROV147:0 "Algharbiya"
- PROV148:0 "bahnhisn"
- PROV149:0 "Nushar"
- PROV150:0 "Yashqar"
- PROV151:0 "Alcona"
+ PROV148:0 "Nupolte"
+ PROV149:0 "Nuguarde"
+ PROV150:0 "Carduna"
+ PROV151:0 "Alconna"
  PROV152:0 "Alburji"
- PROV153:0 "Qalgar"
- PROV154:0 "East Al-Bahriyah"
- PROV155:0 "North Al-Bahriyah"
+ PROV153:0 "Qalgaran"
+ PROV154:0 "Kramhar"
+ PROV155:0 "Šakaron"
  PROV156:0 "Southern Dafda"
- PROV157:0 "Western Dafda"
+ PROV157:0 "Punmeridia"
  PROV158:0 "Northern Dafda"
  PROV159:0 "Iskabban"
  PROV160:0 "Reshan"
  PROV161:0 "Yashar"
  PROV162:0 "Nurmah"
- PROV163:0 "Alqalua"
+ PROV163:0 "Aleqala"
  PROV164:0 "Riqumat"
  PROV165:0 "Qaranish"
  PROV166:0 "Albasatian Sea"
  PROV167:0 "Alpariqa"
  PROV168:0 "Variza"
- PROV169:0 "Alnashar"
- PROV170:0 "Alpadosa"
- PROV171:0 "Shadurim"
+ PROV169:0 "Algefa"
+ PROV170:0 "Padošar"
+ PROV171:0 "Shadar"
  PROV172:0 "Altawrian Coast"
  PROV173:0 "Almazamal"
  PROV174:0 "Águilarroyo"
  PROV175:0 "Fahmhafra"
  PROV176:0 "Camporomero"
  PROV177:0 "Syreniman Sea"
- PROV178:0 "Alqasta"
+ PROV178:0 "Egusat"
  PROV179:0 "Caytuna"
  PROV180:0 "Qurona"
  PROV181:0 "Altadolas"
  PROV182:0 "Ecolunte"
  PROV183:0 "Caladida"
- PROV184:0 "Saqura"
+ PROV184:0 "Humad"
  PROV185:0 "Shamalian Sea"
- PROV186:0 "Riyafola"
+ PROV186:0 "Rifanadan"
  PROV187:0 "Bosalva"
  PROV188:0 "Adonuepadre"
  PROV189:0 "Sierra Verde"
@@ -193,32 +193,32 @@
  PROV192:0 "Namruq"
  PROV193:0 "Zarashim"
  PROV194:0 "Outer Bay"
- PROV195:0 "Algharqim"
- PROV196:0 "Femayim"
+ PROV195:0 "Mahzedar"
+ PROV196:0 "Femadim"
  PROV197:0 "Dushmira"
  PROV198:0 "Shurqal"
- PROV199:0 "Altaqadim"
+ PROV199:0 "Bengaršan"
  PROV200:0 "Huzamjar"
- PROV201:0 "Al-Wadihajara"
+ PROV201:0 "Daluhar"
  PROV202:0 "Hamidari Bay"
- PROV203:0 "Alghamdhah"
- PROV204:0 "Alshawahid"
- PROV205:0 "Alzamzam"
+ PROV203:0 "Gambradan"
+ PROV204:0 "Bardazan"
+ PROV205:0 "Barmahz"
  PROV206:0 "Hazsihar"
- PROV207:0 "Almutawiyah"
- PROV208:0 "Alsham"
- PROV209:0 "Liqalnahr"
- PROV210:0 "Almufqoodah"
+ PROV207:0 "Meqdal"
+ PROV208:0 "Tunar"
+ PROV209:0 "Lahban"
+ PROV210:0 "Mafqadan"
  PROV211:0 "Isealdún"
  PROV212:0 "Coast of Rubmeo"
- PROV213:0 "Qadruq"
- PROV214:0 "Alnithar"
- PROV215:0 "Qalish"
- PROV216:0 "Alradom"
- PROV217:0 "Pasharbad"
- PROV218:0 "Barqanah"
- PROV219:0 "Abyadard"
- PROV220:0 "Zawarqabad"
+ PROV213:0 "Qadrun"
+ PROV214:0 "Nithar"
+ PROV215:0 "Qalin"
+ PROV216:0 "Radom"
+ PROV217:0 "Naqharbad"
+ PROV218:0 "Barquna"
+ PROV219:0 "Liškar"
+ PROV220:0 "Zawarmahz"
  PROV221:0 "Hercogaostan Coast"
  PROV222:0 "Eemaamin"
  PROV223:0 "Lauagusa"
@@ -320,7 +320,7 @@
  PROV319:0 "Piirilinn"
  PROV320:0 "Kõrbes"
  PROV321:0 "Oslugor"
- PROV322:0 "Niheyabdan Sea"
+ PROV322:0 "Southern Gandari Sea"
  PROV323:0 "Karusalu"
  PROV324:0 "Kõla"
  PROV325:0 "Määdnu"
@@ -569,7 +569,7 @@
  PROV568:0 "Bodendorf"
  PROV569:0 "Huigesteen"
  PROV570:0 "Falxburbg"
- PROV571:0 "Coast of Altaqadim"
+ PROV571:0 "Varizan Coast"
  PROV572:0 "Pratzau"
  PROV573:0 "Jenkedy"
  PROV574:0 "Bohmins"
@@ -702,7 +702,7 @@
  PROV701:0 "Sendiegen"
  PROV702:0 "Ubrasaman"
  PROV703:0 "Topochy"
- PROV704:0 "704"
+ PROV704:0 "Maqhazian Coast"
  PROV705:0 "Sepretola"
  PROV706:0 "Mrawa"
  PROV707:0 "Lebyeni"
@@ -936,7 +936,7 @@
  PROV935:0 "Capiranella" 
  PROV936:0 "Cupenesa"
  PROV937:0 "Orenade"
- PROV938:0 "938"
+ PROV938:0 "Coast of Akasay"
  PROV939:0 "Salvanian Coast"
  PROV940:0 "Usotto"
  PROV941:0 "Massotte"
@@ -1709,7 +1709,7 @@
  PROV1708:0 "Akhalivan"
  PROV1709:0 "Davirat"
  PROV1710:0 "Dmainisi"
- PROV1711:0 "Coast of Qudsala"
+ PROV1711:0 "East Fimaqan Sea"
  PROV1712:0 "Dzvelikosh"
  PROV1713:0 "Tetrigor"
  PROV1714:0 "Bezaq"
@@ -1717,7 +1717,7 @@
  PROV1716:0 "Akhakal" 
  PROV1717:0 "1717"
  PROV1718:0 "1718"
- PROV1719:0 "Coast of Wahida"
+ PROV1719:0 "Coast of Nasala"
  PROV1720:0 "Karisavela"
  PROV1721:0 "Karwazi"
  PROV1722:0 "Marilaq"
