--- a/localisation/TD_01_flavour_colonial_l_english.yml
+++ b/localisation/TD_01_flavour_colonial_l_english.yml
@@ -71,13 +71,13 @@ random_event.EVTNAME2:1 "Emergent Culture in the Colonies"
  random_event.EVTDESC2A:1 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [talamgalter_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Talamgalter, and this sentiment is beginning to spread throughout [talamgalter_province.GetAreaName]."
  random_event.EVTDESC2B:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [thiccen_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Thiccen, and this sentiment is beginning to spread throughout [thiccen_province.GetAreaName]."
  random_event.EVTDESC2C:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [mexican_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Mexicans, and this sentiment is beginning to spread throughout [mexican_province.GetAreaName]."
- random_event.EVTDESC2D:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [ardwajdi_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Ardwajdi, and this sentiment is beginning to spread throughout [ardwajdi_province.GetAreaName]."
+ random_event.EVTDESC2D:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [dasiras_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Dašras, and this sentiment is beginning to spread throughout [dasiras_province.GetAreaName]."
  random_event.EVTDESC2E:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [chantlisch_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Chantlisch, and this sentiment is beginning to spread throughout [chantlisch_province.GetAreaName]."
  random_event.EVTDESC2F:0 "As time goes by the ties between the our former homeland and the colonies grow weaker. The settlers in [louisianans_province.GetName] barely associate themselves with their ancestral home any more. They now prefer to think of themselves as Louisianans, and this sentiment is beginning to spread throughout [louisianans_province.GetAreaName]."
  random_event.EVTOPTA2:1 "We should maintain our traditional culture."
  random_event.EVTOPTB2:1 "Embrace Talamgalter culture."
  random_event.EVTOPTC2:0 "Embrace Thiccen culture."
- random_event.EVTOPTD2:0 "Embrace Ardwajdi culture."
+ random_event.EVTOPTD2:0 "Embrace Dašras culture."
  random_event.EVTOPTE2:0 "Embrace Chantlisch culture."
  random_event.EVTOPTF2:0 "Embrace Québécois culture."
  random_event.EVTOPTG2:0 "Embrace Louisianans culture."
