--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -203,33 +203,33 @@
  absolutist_reputation:0 "Absolutist Reputation"
  desc_absolutist_reputation:0 "Our ruler is known for his ambitions to unify the Empire."
  SE_incident.10.t:0 "The Ultimatum"
- SE_incident.10.desc:0 ""
- SE_incident.10.a:0 "Bah! Humbugs!"
+ SE_incident.10.desc:0 "A bishopic entourage from the electoral council have came to our court bringing an ultimatum - the tetrarchs want us to stop reforming the empire, because they fear that this will lead to instability, decay, wars, plagues and many more terrible things. Seemingly asburd, the power of tetrarchy cannot be undermined."
+ SE_incident.10.a:0 "Hah! I do not fear some puny clerics."
  SE_incident.10.b:0 "Maybe I went a little to far..."
  SE_incident.11.t:0 "Emperor's Response"
- SE_incident.11.desc:0 ""
+ SE_incident.11.desc:0 "Our envoys have returned with tragic news - the emperor laughed them off of the court. Many of our fellow clergymen agree, that the only path is forward - to an empire without dangerous figureheads, led by true intelectual elite of the world."
  SE_incident.11.a:0 "The emperor will pay for this."
  SE_incident.11.b:0 "Back Down."
  SE_incident.12.t:0 "League of Lippstadt"
- SE_incident.12.desc:0 ""
+ SE_incident.12.desc:0 "The conflict between the Vicarus and the electorate has led to a boiling point with a threat of war on the horizon - but who will dominate the empire?"
  SE_incident.12.a:0 "Emperor is right - electors corrupt the Empire."
  SE_incident.12.b:0 "Tetrarchy will restore integrity to the Empire." 
  SE_incident.13.t:0 "Emperor Backs Down!"
- SE_incident.13.desc:0 ""
+ SE_incident.13.desc:0 "The envoys bring great news - the emperor has understood his misdeeds and decided to abdicate as an emperor. Despite this, safety measures must be taken to prevent the rulers of [emperor.GetName] to restore their power."
  SE_incident.13.a:0 "Very well."
  SE_incident.14.t:0 "The Aftermath"
- SE_incident.14.desc:0 ""
+ SE_incident.14.desc:0 "We are victorious! The treacherous emperor has been defeated and we are the sole rulers of the empire."
  SE_incident.14.a:0 "Very well."
  SE_incident.15.t:0 "The Aftermath"
- SE_incident.15.desc:0 ""
+ SE_incident.15.desc:0 "We are victorious! The treacherous electors have been defeated and we are the sole rulers of the empire."
  SE_incident.15.a:0 "Very well."
  SE_incident.16.t:0 "Lippstadt Compromise"
- SE_incident.16.desc:0 ""
+ SE_incident.16.desc:0 "The empire has been torn apart by conflict and instability for far, far too long. We cannot let minor disagreements lead to full-blown civil wars, all while our enemies wait for the demise of this eternal kingdom. We must convince the tetrarchy to come to their senses to build a new empire."
  SE_incident.16.a:0 "We should negotiate for the good of the Empire."
  SE_incident.16.b:0 "Outrageous! We will crush them."
  SE_incident.16.tt:0 "We will try to negotiate a white peace with the tetrarchy.\nIf They accept:"
  SE_incident.17.t:0 "Lippstadt Compromise"
- SE_incident.17.desc:0 ""
+ SE_incident.17.desc:0 "The imperial envoys bring news of emperor wanting to sign peace. The Vicarus wants to prevent a complete collapse of our magnificent empire, by sharing the power in the empire equally. Should we back down a little if it means prolonging the lifespan of the greatest civilization?"
  SE_incident.17.a:0 "We should negotiate for the good of the Empire."
  SE_incident.17.b:0 "Outrageous! We will crush them."
  cb_imperial_domination:0 "Imperial Domination"
