elevate kingdom button

--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -165,7 +165,7 @@
  PROV_ADJ164:0 "Riqumat"
  PROV_ADJ165:0 "Qaranish"
  PROV_ADJ166:0 "Albasatian Sea"
- PROV_ADJ167:0 "Alpariqa"
+ PROV_ADJ167:0 "Pariga"
  PROV_ADJ168:0 "Variza"
  PROV_ADJ169:0 "Alnashar"
  PROV_ADJ170:0 "Alpadosa"
