--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -165,7 +165,7 @@
  PROV164:0 "Riqumat"
  PROV165:0 "Qaranish"
  PROV166:0 "Albasatian Sea"
- PROV167:0 "Alpariqa"
+ PROV167:0 "Pariga"
  PROV168:0 "Variza"
  PROV169:0 "Algefa"
  PROV170:0 "Padošar"
