--- a/localisation/TD_custom_gui_l_english.yml
+++ b/localisation/TD_custom_gui_l_english.yml
@@ -1,1 +1,3 @@
 ﻿l_english:
+ elevate_kingdom_gui_tt:0 "§YElevate Kingdom§!\n"
+ elevate_kingdom_gui_trigger_tt:0 "All non-oversea provinces of §Y[Root.Culture.GetName]§! culture are owned by §Y[Root.GetName]§! or our non-Tributary Subjects."
