--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -529,26 +529,26 @@
  #################Second Empire Stuff ################################
  disaster_internal_decay_of_second_empire:0 "Internal Decay of Second Empire"
  disaster_sis_decay.1.t:0 "Internal Decay of Second Empire Begins"
- disaster_sis_decay.1.desc:0 " "
+ disaster_sis_decay.1.desc:0 "The end times are nigh! Our treacherous subjects have decided decided to oppose the God's will and rebel against the new order in the empire.\n\nOur envoys aren't trusted or even allowed into many Saelian courts. Mercenaries run rampant across the nation, raiding important routes and breaking imperial laws. Multiple bishoprics are being actively seized by the local nobles following the overextension of our diplomatic reach and overall distrust. Cities fear for their prosperity as routes become inaccesible and flow of goods from the outside is drastically slowing.\n\nAll of these events lead to lack of any hope among our subjects of us being able to restore the empire. We have to prove them wrong if this state is to survive."
  disaster_sis_decay.1.a:0 "May god have mercy on us"
  TD_SIS_Prince_Bonuses:0 "Decay in the Second Empire"
  SIS_DECAY_WARNING_TT:0 "§YIf we have less than 5 subjects or 450 total subject and our development, the empire will collapse.§!"
  
- disaster_sis_decay.2.t:0 "End of Internal Decay in the Second Empire"
- disaster_sis_decay.2.desc:0 " "
- disaster_sis_decay.2.a:0 "Hopefully the worst is behind us"
+ disaster_sis_decay.2.t:0 "A New Dawn"
+ disaster_sis_decay.2.desc:0 "The empire lives! After years of struggle, internal conflicts and instability, the empire is back on track to be a major player in the worldly affairs. The foundations of a new, theocratic state will allow us to prosper forever more."
+ disaster_sis_decay.2.a:0 "Hopefully the worst is behind us.."
  TD_SIS_End_of_the_Decay:0 "End of the Decay"
  disaster_sis_decay.2.b:0 "We rule Supreme"
  TD_SIS_Supremacy_of_the_Tetrarchy:0 "Supremacy of the Tetrarchy"
  
  disaster_sis_decay.3.t:0 "Collapse of the Second Empire"
- disaster_sis_decay.3.desc:0 " "
- disaster_sis_decay.3.a:0 "Empire is in ashes, but we will prevail!"
+ disaster_sis_decay.3.desc:0 "Darkest times are upon us. All subjects have abandoned the true way of the Saelius and drifted into heresy and chaos, abandoning their legitimate overlords in favor of treacherous self-will. Without us, they will never manage to restore their stability and prosper. In a last ditch effort, many bishops are cursing as many traitors as they can, hoping the god will deal with them."
+ disaster_sis_decay.3.a:0 "The state has crumbled, but the righteousness will always prevail!"
  
  SIS_DECAY_Every_subjects_gains_10_LD_tt:0 "Every Subject will gain §R10 Liberty Desire§!"
- SIS_DECAY_Every_subjects_gains_5_LD_tt:0 "Every Subject will gain §R5 Liberty Desire§!"
- SIS_DECAY_Every_other_subjects_gains_10_LD_tt:0 "Every other Subject will gain §R10 Liberty Desire§!"
- SIS_DECAY_Every_other_subjects_loses_5_LD_tt:0 "Every other Subject will lose §G5 Liberty Desire§!"
+ SIS_DECAY_Every_subjects_gains_5_LD_tt:0 "Every Subject will gain §R5§! Liberty Desire"
+ SIS_DECAY_Every_other_subjects_gains_10_LD_tt:0 "Every other Subject will gain §R10§! Liberty Desire"
+ SIS_DECAY_Every_other_subjects_loses_5_LD_tt:0 "Every other Subject will lose §G5§! Liberty Desire"
  SIS_DECAY_Every_subjects_loses_10_LD_tt:0 "Every Subject will lose §G10 Liberty Desire§!"
  SIS_DECAY_Every_subjects_loses_20_LD_tt:0 "Every Subject will lose §G20 Liberty Desire§!"
  
@@ -560,52 +560,53 @@
  SIS_DECAY_Every_subjects_loses_25_opinion_tt:0 "Every Subject will lose §R25 opinion of us, and we of them§!."
  SIS_DECAY_Every_subjects_loses_20_opinion_tt:0 "Every Subject will lose §R20 opinion of us, and we of them§!."
  SIS_DECAY_Every_subjects_loses_10_opinion_tt:0 "Every Subject will lose §R10 opinion of us, and we of them§!."
+
  SIS_DECAY_Every_subjects_gains_10_opinion_tt:0 "Every Subject will gain §G10 opinion of us, and we of them§!."
  SIS_DECAY_Every_subjects_gains_20_opinion_tt:0 "Every Subject will gain §G20 opinion of us, and we of them§!."
  SIS_DECAY_Every_subjects_gains_40_opinion_tt:0 "Every Subject will gain §G40 opinion of us, and we of them§!."
  SIS_DECAY_Every_subjects_gains_50_opinion_tt:0 "Every Subject will gain §G50 opinion of us, and we of them§!."
  
- disaster_sis_decay.4.t:0 "Peasants Exploit another loophole"
- disaster_sis_decay.4.desc:0 " "
+ disaster_sis_decay.4.t:0 "Peasants Turn to Banditry"
+ disaster_sis_decay.4.desc:0 "Serfs all across the empire are joining variety of mercenary bands not wishing to earn money through hard work, but to plunder and raid important trade hubs and routes. Many Nobles are upset because they are losing their precious workforce."
  disaster_sis_decay.4.a:0 "We have more important matters on hand right now."
- disaster_sis_decay.4.b:0 "We can't allow that! Kill them, or something!"
- disaster_sis_decay.5.t:0 "Imperial Princes ask us if they could pay less taxes"
- disaster_sis_decay.5.desc:0 " "
- disaster_sis_decay.5.a:0 "We can allow it this time"
+ disaster_sis_decay.4.b:0 "We can't allow that! Kill them or something!"
+ disaster_sis_decay.5.t:0 "Imperial Princes Request Tax Cuts"
+ disaster_sis_decay.5.desc:0 "Envoys from some of our subjects have reached out to us in order to request a decrease in taxations, due to some unpredictable factors such as economic loss, droughts, and many more made-up excuses."
+ disaster_sis_decay.5.a:0 "We can bend the rules a little bit..."
  TD_SIS_Princes_dont_pay_taxes:0 "Reduced Imperial Taxation"
- disaster_sis_decay.5.b:0 "Nobody gets special treatment"
- disaster_sis_decay.6.t:0 "Nobility opposes unpopular reforms"
- disaster_sis_decay.6.desc:0 " "
- disaster_sis_decay.6.a:0 "We won't back down"
- disaster_sis_decay.6.b:0 "Let's change some reforms to appease the nobility"
- disaster_sis_decay.6.c:0 "We better back down"
- disaster_sis_decay.7.t:0 "Nobility demands more privileges"
- disaster_sis_decay.7.desc:0 " "
- disaster_sis_decay.7.a:0 "We better keep the nobility happy"
+ disaster_sis_decay.5.b:0 "Nobody gets special treatment."
+ disaster_sis_decay.6.t:0 "Nobility Opposes Unpopular Reforms"
+ disaster_sis_decay.6.desc:0 "Some, if not most, of our reforms are seen as too drastic by many of distrustful and rebellous subjects. They sent some emissaries in order to prevent the reform from being passed."
+ disaster_sis_decay.6.a:0 "We can't back down."
+ disaster_sis_decay.6.b:0 "Let's change the reform a bit to appease them."
+ disaster_sis_decay.6.c:0 "We will yield to our subjects this time."
+ disaster_sis_decay.7.t:0 "Nobility Demands More Privileges"
+ disaster_sis_decay.7.desc:0 "Due to variety of issues and our apparent inability to solve local problems, the nobles demand increase in their rights to self-governance, claiming that this will help the empire to survive. These demands are obviously absurd, but keeping the nobility pleased might be beneficial."
+ disaster_sis_decay.7.a:0 "We better keep the nobility happy."
  disaster_sis_decay.7.b:0 "You have enough privileges already!"
- disaster_sis_decay.8.t:0 "Loyal, Famous Noble lends us a hand"
- disaster_sis_decay.8.desc:0 " "
+ disaster_sis_decay.8.t:0 "Loyal and Powerful Noble Lends us a Hand"
+ disaster_sis_decay.8.desc:0 "Today was a curious day at the court - a noble who isn't complaining about our rule! A renowned and widely liked among his peers count has personally reached out to the tetrarchy in order to offer his help in managing the collapsing empire."
  disaster_sis_decay.8.a:0 "He should vouch for us in the empire"
  disaster_sis_decay.8.b:0 "We could use a bigger levy"
  disaster_sis_decay.8.c:0 "Our coffers we're empty as of late"
  disaster_sis_decay.8.d:0 "We should ask for general aid"
  
- disaster_sis_decay.9.t:0 "[TD_SIS_DECAY_Imperial_prince_who_opposes_popular_reform.GetName]'s ruler wants us to back down from popular reform"
- disaster_sis_decay.9.desc:0 " "
+ disaster_sis_decay.9.t:0 "[TD_SIS_DECAY_Imperial_prince_who_opposes_popular_reform.Monarch.GetTitle] of [TD_SIS_DECAY_Imperial_prince_who_opposes_popular_reform.GetName] Opposes a Popular Reform"
+ disaster_sis_decay.9.desc:0 "[TD_SIS_DECAY_Imperial_prince_who_opposes_popular_reform.Monarch.GetTitle] of [TD_SIS_DECAY_Imperial_prince_who_opposes_popular_reform.Monarch.GetName] is actively opposing the passing of one of the new reforms, which is quite popular amongst most of our subjects"
  disaster_sis_decay.9.a:0 "They are right, we should back down from the reform"
  disaster_sis_decay.9.b:0 "We won't back down"
- disaster_sis_decay.10.t:0 "[TD_SIS_DECAY_Imperial_prince_who_rebels.GetName] leaves the empire"
- disaster_sis_decay.10.desc:0 " "
+ disaster_sis_decay.10.t:0 "[TD_SIS_DECAY_Imperial_prince_who_rebels.GetName] Abandons the Empire"
+ disaster_sis_decay.10.desc:0 "Curses! [TD_SIS_DECAY_Imperial_prince_who_rebels.Monarch.GetName] has finally decided to abandon [TD_SIS_DECAY_Imperial_prince_who_rebels.Monarch.GetHerHis] rightful place under us and forge a new path as an independent country. Letting them leave without consequences will surely lead to other princes following their example."
  disaster_sis_decay.10.a:0 "Let them leave"
  disaster_sis_decay.10.b:0 "Nobody can simply 'Leave' Saelian Empire!"
  disaster_sis_decay.12.t:0 "Seeking Support"
- disaster_sis_decay.12.desc:0 " "
+ disaster_sis_decay.12.desc:0 "We cannot exist under this regime any longer. Without emperor, nobody can protect our rights or understand our problems, however it's simply impossible to leave the empire - unless there is someone who is willing to help us..."
  disaster_sis_decay.12.a:0 "Let's seek outside help"
  disaster_sis_decay.12.b:0 "We're better of without them"
- disaster_sis_decay.13.t:0 "[From.GetName] wants us to support their independence"
- disaster_sis_decay.13.desc:0 " "
- disaster_sis_decay.13.a:0 "Support them"
- disaster_sis_decay.13.b:0 "We have more important matters at hand"
+ disaster_sis_decay.13.t:0 "[From.GetName] Wants us to Support Their Independence"
+ disaster_sis_decay.13.desc:0 "Envoys from [From.Monarch.GetTitle] of [From.GetName] have reached out to us in order to ask for a support due to their ambition to abandon the empire."
+ disaster_sis_decay.13.a:0 "Support them."
+ disaster_sis_decay.13.b:0 "We have more important matters at hand."
  
  #SIS_DECAY_Get_Imperial_Reform_effects_tt:0 "§GEvery Purple-coloured reforms will grant us permanent bonuses equivalent to that of Imperial Reform they are named after.§!"
  SIS_DECAY_overall_reforms_counter:0 "Number of Major Reforms in the Second Empire"
@@ -614,8 +615,8 @@
  TD_SIS_Reform_Cooldown:0 "Reform Cooldown"
  SIS_DECAY_Has_not_reform_cooldown_tt:0 "Hasn't Passed a reform in last four months"
  
- disaster_sis_decay.14.t:0 "Reforming Imperial Diplomcy"
- disaster_sis_decay.14.desc:0 " "
+ disaster_sis_decay.14.t:0 "Reforming Imperial Diplomacy"
+ disaster_sis_decay.14.desc:0 "Diplomacy was an important part of ruling the empire during the monarchical era, but it's not enough during times where our subjects don't trust our judgement. Despite this, it might actually be beneficial to remove some envoys, who were greatly rewarded due to their dynastic ties."
  disaster_sis_decay.14.a:0 "Expand the Legatorum"
  TD_SIS_Expand_The_Legatorum:0 "Expanded the Legatorum"
  TD_SIS_Expand_The_Legatorum_subjects:0 "Expanded the Legatorum"
@@ -628,7 +629,7 @@
  SIS_DECAY_We_will_reform_the_legatorum_tt:0 "§GWe will finish Reforming the Legatorum Institutions§!"
  
  disaster_sis_decay.15.t:0 "Economical Reform in the Empire"
- disaster_sis_decay.15.desc:0 " "
+ disaster_sis_decay.15.desc:0 "Managing large swats of land with different demands, soils and landscapes is quite a strain. Depleting silver mines, failing crops, dilapidated infrastructure and burgher greed are slowly, but surely, damaging the empire."
  disaster_sis_decay.15.a:0 "Institute new Currency"
  TD_SIS_Instituted_New_Currency:0 "Instituted New Currency"
  disaster_sis_decay.15.b:0 "Establish new Mint"
@@ -646,7 +647,7 @@
  SIS_DECAY_We_will_reform_the_economy_tt:0 "§GWe will finish Reforming the Economical Institutions§!"
  
  disaster_sis_decay.16.t:0 "Imperial Administration Reforms"
- disaster_sis_decay.16.desc:0 " "
+ disaster_sis_decay.16.desc:0 "Administration is the backbone of a nation. Trying to placate different rulers, bishops, burghers and peasants is not an easy task, but the empire somehow managed to control all of the peoples living in its borders for centuries, thanks to the feudal system. Embracing it as a theocratic state is a risky maneuver, but if we can manage to appease the nobility, it will work in our favor."
  disaster_sis_decay.16.a:0 "Strip Nobility's Privileges"
  TD_SIS_Stripped_Nobilitys_Privileges:0 "Stripped Nobility's Privileges"
  disaster_sis_decay.16.b:0 "Keep Nobility's Privileges"
@@ -670,7 +671,7 @@
  SIS_DECAY_We_will_reform_the_administration_tt:0 "§GWe will finish Reforming the Administrative Institutions§!"
  
  disaster_sis_decay.17.t:0 "Ascertain the Mercenary Situation"
- disaster_sis_decay.17.desc:0 " "
+ disaster_sis_decay.17.desc:0 "Mercenaries play an important role in the current times, as they were heavily used during not only the Nevledian succession, but also the righteous League of Lippstadt. Now however, many turn to banditry due to unpaid contracts and adminsitrative chaos in the countryside, often recruiting peasants to join their barbaric practices."
  disaster_sis_decay.17.a:0 "Rehire Rouge mercenaries"
  TD_SIS_Rehired_Rouge_Mercenaries:0 "Rehired Rouge Mercenaries"
  disaster_sis_decay.17.b:0 "Hunt down Rouge mercenaries"
@@ -694,31 +695,31 @@
  SIS_DECAY_We_will_reform_the_mercenaries_tt:0 "§GWe will get mercenaries under control.§!"
  TD_SIS_Finishing_Merc_Reforms_Will_Give_Back_Merc_Recruitment_tt:0 "§YFinishing all mercenary questions will allow us to recruit Mercenaries again.§!"
  
- disaster_sis_decay.18.t:0 "People stop using Imperial Coin"
- disaster_sis_decay.18.desc:0 "
+ disaster_sis_decay.18.t:0 "People Abandon Imperial Coin"
+ disaster_sis_decay.18.desc:0 "More and more merchants and burghers are starting to embrace foreign currencies, due to the decreasing stability of the Imperial Coin and depletion of the old mint, leading to increasing the economic turmoil even more."
  disaster_sis_decay.18.a:0 "We can't do anything about this right now"
  disaster_sis_decay.18.b:0 "Force them to start using the coin again!"
  
- disaster_sis_decay.19.t:0 "Mercenaries plunder Imperial Land"
- disaster_sis_decay.19.desc:0 " "
- disaster_sis_decay.19.a:0 "We can't spare the manpower for this issue"
- disaster_sis_decay.19.b:0 "Kill them."
+ disaster_sis_decay.19.t:0 "Mercenaries Plunder Imperial Land"
+ disaster_sis_decay.19.desc:0 "Many mercenaries raid and loot the countryside, due to not only lack of contracts, but also many rulers being unable to pay them off."
+ disaster_sis_decay.19.a:0 "We can't spare the manpower for this issue."
+ disaster_sis_decay.19.b:0 "Kill them!"
  
- disaster_sis_decay.20.t:0 "Local Nobility doesn't send Levy"
- disaster_sis_decay.20.desc:0 " "
- disaster_sis_decay.20.a:0 "We can't do anything about this at the moment"
+ disaster_sis_decay.20.t:0 "Local Nobility Refuses Levy"
+ disaster_sis_decay.20.desc:0 "Nobility from all across the empire is not fullfilling their duty of sending body-abled men to serve in the Imperial military, protesting the overthrowing of the emperor and changing of many ancient laws."
+ disaster_sis_decay.20.a:0 "We can't do anything about this at the moment."
  disaster_sis_decay.20.b:0 "We need those men!"
  
- disaster_sis_decay.21.t:0 "Nobility wants us to Re-establish the Imperial Diet"
- disaster_sis_decay.21.desc:0 " "
- disaster_sis_decay.21.a:0 "We won't back down"
- disaster_sis_decay.21.b:0 "Decrease taxes and levies to appease them!"
+ disaster_sis_decay.21.t:0 "Nobility Demands the Reestablishment of the Diet"
+ disaster_sis_decay.21.desc:0 "The Diet has been discontinued as a way of governance, due to it being an obvious remnant of the faulty monarchical system. Despite its obvious flaws, many nobles want to restore it, because they see it as a way to diminish our power in the Empire."
+ disaster_sis_decay.21.a:0 "We won't back down!"
+ disaster_sis_decay.21.b:0 "Decreasing levies and taxes should appease them."
  disaster_sis_decay.21.c:0 "We should listen.."
  
  disaster_sis_decay.22.t:0 "Reforming the Diet"
- disaster_sis_decay.22.desc:0 " "
- disaster_sis_decay.22.a:0 "We should try to establish an perpetual diet"
- disaster_sis_decay.22.b:0 "We should replace diet with another institution"
+ disaster_sis_decay.22.desc:0 "The Imperial diet is obviously a failed system of governance, which only led to weakening of not only the imperial power, but also the influence of the tetrarchy and integrity of the empire. However, through drastic reforms it can be fixed, to serve us properly."
+ disaster_sis_decay.22.a:0 "We should try to establish the old perpetual diet."
+ disaster_sis_decay.22.b:0 "A new institution is needed."
  decision_sis_decay_question_of_diet_title:0 "Question of Imperial Diet"
  TD_SIS_Call_emergency_diet_tt:0 "§GWe shall decide the fate of Imperial Diet§!"
  TD_SIS_Decay_Unlock_Perpetual_diet_decision_tt:0 "Unlocks "§PEstablish Perpetual Diet§!" decision"
@@ -733,15 +734,15 @@
  TD_SIS_Decay_Block_Pacification_Path_tt:0 "§RWe will forever lose ability to pacify empire by force§!"
  
  disaster_sis_decay.101.t:0 "Bohemia's dreams of Emperorship Shattered."
- disaster_sis_decay.101.desc:0 "Bohemia wants to leave the empire"
+ disaster_sis_decay.101.desc:0 "Terrible news - Bohemia wants to distance themselves from the empire. The reasons are obvious - they want to continue hoarding power and corrupting the perfect system of the Saelian faith, and splinter the faith and the Empire even more."
  disaster_sis_decay.101.a:0 "Let them go, we don't need them anyway."
  disaster_sis_decay.101.b:0 "Stop them!"
  disaster_sis_decay.102.t:0 "Geoberic Peninsula questions authority of the Council"
- disaster_sis_decay.102.desc:0 "Geoberic nations want to leave the empire"
+ disaster_sis_decay.102.desc:0 "Terrible news - Geoberic nations want to distance themselves from the empire. The reasons are obvious - they want to continue hoarding power and corrupting the perfect system of the Saelian faith, and splinter the faith and the Empire even more."
  disaster_sis_decay.102.a:0 "Let them go, we don't need them anyway."
  disaster_sis_decay.102.b:0 "Stop Them!"
  disaster_sis_decay.103.t:0 "Northern Marches reject the Empire"
- disaster_sis_decay.103.desc:0 "Nahtrucer and Nordmarker nations want to leave the empire"
+ disaster_sis_decay.103.desc:0 "Terrible news - Northwestern marches want to distance themselves from the empire. The reasons are obvious - they want to continue hoarding power and corrupting the perfect system of the Saelian faith, and splinter the faith and the Empire even more."
  disaster_sis_decay.103.a:0 "Let them go, we don't need them anyway."
  disaster_sis_decay.103.b:0 "Stop Them!"
  
