--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -123,3 +123,21 @@
 
  kakigian_resettlement_ai_boost:0 "Self-Sustaining Colonies - AI buff"
  desc_kakigian_resettlement_ai_boost:0 "Self-Sustaining Colonies - AI buff"
+
+ absukhan_ideas:0 "Absukhan Ideas"
+ absukhan_ideas_bonus:0 "Absukhan Ambition"
+ absukhan_ideas_start:0 "Absukhan Traditions"
+ absukha_memories_of_zakarturia:0 "Memories of Zakarturia"
+ absukha_memories_of_zakarturia_desc:0 "In the ancient times, we were merely slaves of the Zakarturi, forced to fight in their meaningless wars. Now we proudly stand by ourselves, ready to build a new legacy."
+ absukha_hovkblur_earthwork:0 "Hovkblur Earthwork"
+ absukha_hovkblur_earthwork_desc:0 "Massive chains of ramparts, ditches and trenches surround the settlement of Hovkblur, which greatly helped to save our people from invasions. Despite its age, it still serves its purpose well to this day."
+ absukha_makravani_raiders:0 "Makravani Raiders"
+ absukha_makravani_raiders_desc:0 "Cavalrymen from the Makravani swamplands are renowned for their maneuverability and being able to travel and fight with little to no equipment. This allows them to easily hit the enemy and quickly get away."
+ absukha_strength_in_unity:0 "Strength in Unity"
+ absukha_strength_in_unity_desc:0 "The different tribes of Absukha only recently united into a bigger state, fearing the threat of the Sasemite horde. Despite initial struggles, the federation survived and has a potential to be one of the great powers of Kakigia."
+ absukha_kakigian_furs:0 "Kakigian Furs"
+ absukha_kakigian_furs_desc:0 "Variety of furs are exported to the south, thanks to the efforts of our brave hunters, from small rabbit hides to huge bear coats."
+ absukha_folk_syncretism:0 "Folk Syncretism"
+ absukha_folk_syncretism_desc:0 "Merhaanic beliefs dominate the steppe and even our nation. Despite this, many local tales and legends have been integrated into their pantheon, solidifying the uniqueness of our culture."
+ absukha_reclaiming_what_was_lost:0 "Reclaiming What Was Lost"
+ absukha_reclaiming_what_was_lost_desc:0 "After the Bunelisuli collapse, the vast steppe awaits a new ruler. We cannot let this opportunity go to waste - the legendary Povativi Empire must be restored."
